Sistema emitindo e fazendo download da nota da wiki (florianopolis), ambiente nacional.